Login user shifed to mongodb

--- a/backend/.env
+++ b/backend/.env
@@ -1,3 +1,8 @@
 PORT=8000
 MONGODB_URI=mongodb+srv://tushalpethani:tushal456@cluster0.j2kpkg5.mongodb.net/
 CORS_ORIGIN=*
+
+REFRESH_TOKEN_SECRET=refreshsecret
+REFRESH_TOKEN_EXPIRY=10d
+ACCESS_TOKEN_SECRET=accesssecret
+ACCESS_TOKEN_EXPIRY=1d
